// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doGetOrders() action creator should create the correct actions for when the get orders procedure is successful when splitByOrderMerchantCode is active: get orders success payload when split by merchantOrderCode 1`] = `
Object {
  "meta": Object {
    "splitByMerchantOrderCode": true,
  },
  "payload": Object {
    "entities": Object {
      "orders": Object {
        "3558DS": Object {
          "byMerchant": Object {
            "10537": Object {
              "PZ1130383514": Object {
                "checkoutOrderId": 15338048,
                "merchant": Object {
                  "id": 10537,
                  "name": "TOMAS MAIER MADISON",
                },
                "merchantOrderCode": "PZ1130383514",
                "returnAvailable": false,
                "returnId": null,
                "status": "Reviewing order",
                "totalQuantity": 2,
                "userId": 29521154,
              },
            },
            "10538": Object {
              "PZ1130238823": Object {
                "checkoutOrderId": 15338048,
                "merchant": Object {
                  "id": 10538,
                  "name": "TOMAS MAIER BLEECKER",
                },
                "merchantOrderCode": "PZ1130238823",
                "returnAvailable": false,
                "returnId": null,
                "status": "Reviewing order",
                "totalQuantity": 1,
                "userId": 29521154,
              },
            },
          },
          "createdDate": 1539688029817,
          "id": "3558DS",
          "totalItems": 3,
        },
        "QUJ9AC": Object {
          "byMerchant": Object {
            "10537": Object {
              "PZ1129578735": Object {
                "checkoutOrderId": 15338048,
                "merchant": Object {
                  "id": 10537,
                  "name": "TOMAS MAIER MADISON",
                },
                "merchantOrderCode": "PZ1129578735",
                "returnAvailable": false,
                "returnId": null,
                "status": "Reviewing order",
                "totalQuantity": 1,
                "userId": 29521154,
              },
            },
          },
          "createdDate": 1534245134007,
          "id": "QUJ9AC",
          "totalItems": 1,
        },
      },
    },
    "result": Object {
      "items": Object {
        "entries": Array [
          "3558DS",
          "3558DS",
          "QUJ9AC",
        ],
        "number": 1,
        "totalItems": 3,
        "totalPages": 1,
      },
      "userId": 29521154,
    },
  },
  "type": "@farfetch/blackout-core/GET_ORDERS_SUCCESS",
}
`;

exports[`doGetOrders() action creator should create the correct actions for when the get orders procedure is successful: get orders success payload 1`] = `
Object {
  "meta": Object {
    "splitByMerchantOrderCode": undefined,
  },
  "payload": Object {
    "entities": Object {
      "orders": Object {
        "3558DS": Object {
          "byMerchant": Object {
            "10537": Object {
              "checkoutOrderId": 15338048,
              "merchant": Object {
                "id": 10537,
                "name": "TOMAS MAIER MADISON",
              },
              "merchantOrderCode": "PZ1130383514",
              "returnAvailable": false,
              "returnId": null,
              "status": "Reviewing order",
              "totalQuantity": 2,
              "userId": 29521154,
            },
            "10538": Object {
              "checkoutOrderId": 15338048,
              "merchant": Object {
                "id": 10538,
                "name": "TOMAS MAIER BLEECKER",
              },
              "merchantOrderCode": "PZ1130238823",
              "returnAvailable": false,
              "returnId": null,
              "status": "Reviewing order",
              "totalQuantity": 1,
              "userId": 29521154,
            },
          },
          "createdDate": 1539688029817,
          "id": "3558DS",
          "totalItems": 3,
        },
        "QUJ9AC": Object {
          "byMerchant": Object {
            "10537": Object {
              "checkoutOrderId": 15338048,
              "merchant": Object {
                "id": 10537,
                "name": "TOMAS MAIER MADISON",
              },
              "merchantOrderCode": "PZ1129578735",
              "returnAvailable": false,
              "returnId": null,
              "status": "Reviewing order",
              "totalQuantity": 1,
              "userId": 29521154,
            },
          },
          "createdDate": 1534245134007,
          "id": "QUJ9AC",
          "totalItems": 1,
        },
      },
    },
    "result": Object {
      "items": Object {
        "entries": Array [
          "3558DS",
          "3558DS",
          "QUJ9AC",
        ],
        "number": 1,
        "totalItems": 3,
        "totalPages": 1,
      },
      "userId": 29521154,
    },
  },
  "type": "@farfetch/blackout-core/GET_ORDERS_SUCCESS",
}
`;
